# raspberry_pi_led_lamp_driver

./: README.md
kernel_driver/: README.md
kernel_driver/src/: .gitignore  Makefile
scripts/: .gitignore  Makefile  README.md  create_deb.sh  touch
src/: .gitignore  Makefile  led_lamp_driver.c
theory/: README.implementation.md  README.md
userspace_program/: README.md
userspace_program/driver_communication_service/: CMakeLists.txt  Makefile  README.md  conanfile.py
userspace_program/driver_communication_service/config/: driver_service.ini  jens.printerlamp.driver_interaction.conf
userspace_program/driver_communication_service/include/: config_parser.hpp  dbus_interaction.hpp  utils.hpp
userspace_program/driver_communication_service/src/: config_parser.cpp  dbus_interaction.cpp  main.cpp
userspace_program/driver_communication_service/systemd/: printer_lamp_driver_service.service
userspace_program/driver_communication_service/tests/: CMakeLists.txt  README.md  test1.cpp
userspace_program/printer_communication_service/: README.md  app.py
userspace_program/printer_communication_service/config_example/: lamp_config.ini
userspace_program/printer_communication_service/src/: dbus_lamp_bridge.py  moving_avg_buffer.py  octoprint_json_poller.py
userspace_program/printer_communication_service/systemd/: printer_lamp_octoprint_service.service
